# transient-reports

./: .gitignore  backend.nix  default.nix  frontend.nix  reflex-platform.nix  result  shell.nix  stack.yaml  static  transient-reports.cabal
api/: transient-reports-api.cabal
api/src/Web/Reports/: API.hs
backend/: default.nix  transient-reports-backend.cabal
frontend/: default.nix  transient-reports-frontend.cabal
frontend/app/: Main.hs
frontend/src/Web/: Reports.hs
nixdeps/: axiom.nix  ghcjs-perch.nix  reflex-material-bootstrap.nix  transient-universe.nix  transient.nix
src/Web/: Reports.hs
src/Web/Reports/: Aeson.hs  Types.hs
