name:           transient-reports-api
version:        0.1.0.0
synopsis:       Web app for reports management
description:    Please see README.md
author:         Anton Gushcha
maintainer:     ncrashed@gmail.com
copyright:      Anton Gushcha 2017
license:        MIT
category:       Web
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs: src
  exposed-modules:
    Web.Reports.API
  build-depends:
      base                        >= 4.7      && < 5
    , aeson                       >= 1.0      && < 1.2
    , text                        >= 1.2      && < 1.3
    , time                        >= 1.6      && < 1.7
  default-language: Haskell2010
