name:           transient-reports-backend
version:        0.1.0.0
synopsis:       Web app for reports management
description:    Please see README.md
author:         Anton Gushcha
maintainer:     ncrashed@gmail.com
copyright:      Anton Gushcha 2017
license:        MIT
category:       Web
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs: src
  exposed-modules:
    Web.Reports
  build-depends:
      base                        >= 4.7      && < 5
    , transient-reports-api
  default-language: Haskell2010

executable transient-reports
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base                          >= 4.7       && < 5
    , transient-reports-backend
